# winwrangler

./: .bzrignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  aclocal.m4  configure.ac
data/art/: Makefile.am
debian/: changelog  control  copyright  rules
po/: Makefile  Makefile.in  nl.po
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  main.c  winwrangler.h  ww-hotkeys.c  ww-layout-activate.c  ww-layout-expand.c  ww-layout-switch-spatial.c  ww-layout-tile.c  ww-layout-twothirds.c  ww-layouts.c  ww-layouts.h  ww-tray.c  ww-utils.c
